Without .${{ env.SHA_SHORT }}

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,6 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: redistrict_plugin.${{ env.VERSION }}.${{ env.SHA_SHORT }}
+        name: redistrict_plugin.${{ env.VERSION }}
         path: tmp
 
