--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,13 @@ jobs:
         mkdir tmp
         unzip redistrict.${{ env.VERSION }}.zip -d tmp
 
+    - name: Save PR number to zips
+      run: |
+        cd tmp
+        echo ${{ github.event.number }} | tee pr_number
+        echo ${{ github.event.pull_request.head.sha }} | tee git_commit
+        echo ${{ github.event.number }}
+
     - uses: actions/upload-artifact@v2
       with:
         name: redistrict_plugin.${{ env.VERSION }}
