--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [qgis-plugin-ci]
 plugin_path = redistrict
-github_organization_slug = linz
-project_slug = qgis-plugin
+github_organization_slug = north-road
+project_slug = qgis-redistricting-plugin
